[gd_scene load_steps=26 format=3 uid="uid://bckw13i80sj2q"]

[ext_resource type="Script" uid="uid://dlnb2ettqoj8y" path="res://Menus/New menus/Story/story_mode.gd" id="1_fivo8"]
[ext_resource type="FontFile" uid="uid://05xqcg1wfk6y" path="res://Resources/Fonts/vcr.ttf" id="2_eb8wy"]
[ext_resource type="Texture2D" uid="uid://bjyijtj18vft0" path="res://Resources/Texture/Menus/Story Menu/art/daddy.jpeg" id="3_qgyuq"]
[ext_resource type="Texture2D" uid="uid://coootg2ttxx2" path="res://Resources/Texture/Menus/Story Menu/weeks/week_template.png" id="3_u5jo0"]
[ext_resource type="Script" uid="uid://tyk3ijm44ijn" path="res://Menus/New menus/Story/week_list.gd" id="3_wwdfd"]
[ext_resource type="Texture2D" uid="uid://clj00h5jsqkwm" path="res://Resources/Texture/other/shaders/color pallettes/Classic gba.png" id="4_go844"]
[ext_resource type="Texture2D" uid="uid://d28m17ddcbet3" path="res://Resources/Texture/Menus/Story Menu/Dificulty/normal.png" id="5_37rls"]
[ext_resource type="AudioStream" uid="uid://rfw7lb1kpqyq" path="res://Resources/Sounds/SFX/Menu/cancelMenu.ogg" id="5_ksk6k"]
[ext_resource type="Texture2D" uid="uid://iltgupy4auw4" path="res://Resources/Texture/Menus/Story Menu/Dificulty/ui/idleL.png" id="6_d2xy3"]
[ext_resource type="AudioStream" uid="uid://2un5ssqfh8x" path="res://Resources/Sounds/SFX/Menu/scrollMenu.ogg" id="6_qgyuq"]
[ext_resource type="Texture2D" uid="uid://fsxk1lqgmjsf" path="res://Resources/Texture/Menus/Story Menu/Dificulty/ui/idleR.png" id="7_5wrot"]
[ext_resource type="FontFile" uid="uid://ck56vxwoqe7wy" path="res://Resources/Fonts/fnf font.ttf" id="8_5wrot"]
[ext_resource type="AudioStream" uid="uid://cxjyqjatexvgp" path="res://Resources/Music/Menu/freakyMenu.ogg" id="8_w7wi6"]

[sub_resource type="LabelSettings" id="LabelSettings_u5jo0"]
font = ExtResource("2_eb8wy")
font_size = 30

[sub_resource type="Animation" id="Animation_qgyuq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_ksk6k"]
resource_name = "progress text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w7wi6"]
_data = {
&"RESET": SubResource("Animation_qgyuq"),
&"progress text": SubResource("Animation_ksk6k")
}

[sub_resource type="Animation" id="Animation_5wrot"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.75, 0.75)]
}

[sub_resource type="Animation" id="Animation_d2xy3"]
resource_name = "press"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.75, 0.75), Vector2(0.65, 0.65), Vector2(0.7, 0.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1453w"]
_data = {
&"RESET": SubResource("Animation_5wrot"),
&"press": SubResource("Animation_d2xy3")
}

[sub_resource type="LabelSettings" id="LabelSettings_1453w"]
font = ExtResource("8_5wrot")
font_size = 31
font_color = Color(1, 0.31, 0.9885, 1)

[sub_resource type="Animation" id="Animation_axy06"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_u3h5b"]
resource_name = "selected"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1, 1.03333, 1.06667, 1.1, 1.13333, 1.16667, 1.2, 1.23333, 1.26667, 1.3, 1.33333, 1.36667, 1.4, 1.43333, 1.46667, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.00056, 1.00056), Vector2(1.00132, 1.00132), Vector2(1.0022, 1.0022), Vector2(1.00323, 1.00323), Vector2(1.00444, 1.00444), Vector2(1.00584, 1.00584), Vector2(1.00748, 1.00748), Vector2(1.00939, 1.00939), Vector2(1.01163, 1.01163), Vector2(1.01423, 1.01423), Vector2(1.01726, 1.01726), Vector2(1.0208, 1.0208), Vector2(1.02493, 1.02493), Vector2(1.02975, 1.02975), Vector2(1.03537, 1.03537), Vector2(1.04193, 1.04193), Vector2(1.04958, 1.04958), Vector2(1.0585, 1.0585), Vector2(1.06891, 1.06891), Vector2(1.08105, 1.08105), Vector2(1.09521, 1.09521), Vector2(1.11173, 1.11173), Vector2(1.13101, 1.13101), Vector2(1.15349, 1.15349), Vector2(1.17972, 1.17972), Vector2(1.21031, 1.21031), Vector2(1.246, 1.246), Vector2(1.28763, 1.28763), Vector2(1.3362, 1.3362), Vector2(1.39285, 1.39285), Vector2(1.45894, 1.45894), Vector2(1.53603, 1.53603), Vector2(1.62596, 1.62596), Vector2(1.73087, 1.73087), Vector2(1.85324, 1.85324), Vector2(1.996, 1.996), Vector2(2.16253, 2.16253), Vector2(2.35679, 2.35679), Vector2(2.5834, 2.5834), Vector2(2.84775, 2.84775), Vector2(3.15612, 3.15612), Vector2(3.51584, 3.51584), Vector2(3.93547, 3.93547), Vector2(4.42498, 4.42498), Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_kvpj4"]
resource_name = "selected_2"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tafq4"]
_data = {
&"RESET": SubResource("Animation_axy06"),
&"selected": SubResource("Animation_u3h5b"),
&"selected_2": SubResource("Animation_kvpj4")
}

[node name="Story Mode" type="Node2D"]
script = ExtResource("1_fivo8")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0

[node name="bg" type="ColorRect" parent="Camera2D/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0687983, 0.0687983, 0.0687983, 1)

[node name="topBorder" type="ColorRect" parent="Camera2D/Control"]
z_index = 5
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
color = Color(0.114897, 0.114897, 0.114897, 1)

[node name="bottomBorder" type="ColorRect" parent="Camera2D/Control"]
z_index = 5
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -47.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.114897, 0.114897, 0.114897, 1)

[node name="Control2" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0

[node name="Week Score" type="Label" parent="Camera2D/Control2"]
z_index = 5
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -288.0
offset_bottom = 49.0
grow_horizontal = 0
text = "<week score>"
label_settings = SubResource("LabelSettings_u5jo0")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Week Desc" type="RichTextLabel" parent="Camera2D/Control2"]
z_index = 5
layout_mode = 1
offset_top = 9.0
offset_right = 288.0
offset_bottom = 45.0
theme_override_fonts/normal_font = ExtResource("2_eb8wy")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "<week desc>"
fit_content = true
autowrap_mode = 0
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/Control2/Week Desc"]
libraries = {
&"": SubResource("AnimationLibrary_w7wi6")
}

[node name="TextureRect" type="TextureRect" parent="Camera2D/Control2"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1152.0
offset_top = 49.0
offset_right = -1.0
offset_bottom = -47.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_qgyuq")
expand_mode = 2
stretch_mode = 5

[node name="ClassicGba" type="Sprite2D" parent="Camera2D/Control2"]
position = Vector2(-254, 400)
scale = Vector2(100, 100)
texture = ExtResource("4_go844")

[node name="Difficulty" type="TextureRect" parent="Camera2D/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 272.0
offset_top = 206.0
offset_right = 535.0
offset_bottom = 253.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_37rls")
expand_mode = 2
stretch_mode = 5

[node name="Node2D" type="Node2D" parent="Camera2D/Control2"]

[node name="IdleL" type="Sprite2D" parent="Camera2D/Control2/Node2D"]
position = Vector2(838, 560)
scale = Vector2(0.75, 0.75)
texture = ExtResource("6_d2xy3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/Control2/Node2D/IdleL"]
libraries = {
&"": SubResource("AnimationLibrary_1453w")
}
speed_scale = 2.0

[node name="IdleR" type="Sprite2D" parent="Camera2D/Control2/Node2D"]
position = Vector2(1120, 561)
scale = Vector2(0.75, 0.75)
texture = ExtResource("7_5wrot")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/Control2/Node2D/IdleR"]
libraries = {
&"": SubResource("AnimationLibrary_1453w")
}
speed_scale = 1.5

[node name="tracks" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = 197.0
offset_top = -236.0
offset_right = 564.0
offset_bottom = 64.0

[node name="HEading" type="Label" parent="Camera2D/tracks"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -132.0
offset_bottom = 36.0
grow_horizontal = 0
text = "Tracks :"
label_settings = SubResource("LabelSettings_1453w")
horizontal_alignment = 1

[node name="tracks" type="Label" parent="Camera2D/tracks"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -219.0
offset_top = 61.0
offset_right = -4.0
offset_bottom = 175.0
grow_horizontal = 0
text = "Boggle
Blurt
Harvey"
label_settings = SubResource("LabelSettings_1453w")
horizontal_alignment = 2

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
z_index = 5
offset_left = -630.0
offset_top = -383.0
offset_right = 670.0
offset_bottom = 423.0
color = Color(0, 0, 0, 0)

[node name="anim" type="AnimationPlayer" parent="Camera2D"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_tafq4")
}
autoplay = "selected"

[node name="weekList" type="Node2D" parent="."]
z_index = 8
position = Vector2(0, -20)
script = ExtResource("3_wwdfd")

[node name="Template" type="TextureRect" parent="weekList"]
offset_left = -546.0
offset_top = -404.0
offset_right = -328.0
offset_bottom = -350.0
texture = ExtResource("3_u5jo0")
expand_mode = 3
stretch_mode = 4

[node name="cancelMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ksk6k")

[node name="scrollMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qgyuq")
max_polyphony = 2

[node name="freakyMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_w7wi6")
bus = &"Music"
parameters/looping = true

[node name="BackSceneTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="BackSceneTimer" to="." method="_on_back_scene_timer_timeout"]
